# ollama-agent

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  ROADMAP.md  agent_prompting.py  common_runtime.py  common_tool_schemas.py  common_tools.py  pyproject.toml  requirements-hybrid.txt  requirements-mega.txt  requirements.txt
.github/workflows/: tests.yml
.tmp-tests/memory-cd878d5d331046a9bf2c7c5fa2cc5819/: memory.db
IA/MEGA/: .history  CRITIC [deepseek-r1-14b].bat  CRITICO [qwen3 - Actor-Critico activado].bat  GEMINI [gemini-2.0-flash - Nube inteligente].bat  GROQ [llama-3.3-70b-versatile].bat  INSTALAR DEPENDENCIAS.bat  INSTALL HYBRID DEPS.bat  INSTALL MODEL [qwen2.5-coder-3b].bat  INSTALL MODEL [qwen2.5-coder-7b].bat  LOCAL CODER [qwen2.5-coder-14b].bat  LOCAL CODER [qwen2.5-coder-3b].bat  LOCAL CODER [qwen2.5-coder-7b].bat  OPUS [deepseek-r1 - Razonamiento profundo].bat  README.md  REASONER [deepseek-r1-14b].bat  SONNET [qwen2.5-coder - Coding RTX5070].bat  START OLLAMA.bat  agent.py  agent_session.jsonl
IA/con censura/: HAIKU [phi4 - Razonamiento y matematicas].bat  OPUS [deepseek-r1 - Razonamiento profundo].bat  SONNET [qwen2.5-coder - Rapido y preciso].bat  SONNET [qwen3 - Coding e inteligente].bat
IA/sin censura/: DESCARGAR MODELOS.bat  DOLPHIN [dolphin3 - Sin censura rapido].bat  DOLPHIN-HACKER [HTB - Pentesting - Exploits].bat  GROQ [llama3-groq-tool-use - Herramientas optimizado].bat  HERMES [hermes3 - Sin censura preciso].bat  HERMES-HACKER [HTB - Pentesting - Exploits].bat
config/: CONSTRUIR MODELOS.bat  Modelfile.opus  Modelfile.sonnet
docs/: benchmark.md  demo-flow.md  security.md
prompts/: hybrid_system_prompt.txt  local_system_prompt.txt  system_prompt.example.md
scripts/: analyze_session.py  generar_pdf.py  install.py  run_benchmark.py
src/: Modelfile.dolphin-hacker  Modelfile.hermes-hacker  agent.py  base_agent.py  sandbox.py
src/hybrid/: __init__.py  agent.py
src/hybrid/unix/: critic.sh  (+4 more)
tests/: test_agent_safety.py  test_benchmark_script.py  test_cli_smoke.py  test_prompting.py
tui/: Cargo.toml  README.md
tui/src/: agent.rs  app.rs  config.rs  main.rs  models.rs  preflight.rs  ui.rs
(+14 files in other folders)
